# hsd

./: .gitignore  CLAUDE.md  Cargo.toml  index.html  package-lock.json  package.json
.github/workflows/: auto-tag.yml  release.yml
assets/: styles.css
macos/: Info.plist  entitlements.plist
scripts/: build-macos.sh  bump-version.sh  create-dmg.sh
src/: App.tsx  index.css  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/examples/: test_pdf.rs
src-tauri/src/: commands.rs  lib.rs  log_buffer.rs  main.rs
src-tauri/src/api/: crpt.rs  mod.rs
src-tauri/src/audio/: mod.rs  player.rs
src-tauri/src/domain/: barcode_scanner.rs  mod.rs
src-tauri/src/infrastructure/: mertech_scanner.rs  scan_accumulator.rs
src-tauri/src/pdf/: barcode.rs  generator.rs  merge.rs  mod.rs  printer.rs
src-tauri/src/services/: honest_sign_validator.rs  scanner_manager.rs
src-tauri/src/ui/: mod.rs  persistence.rs  state.rs
src/api/: crpt.rs
src/components/common/: ErrorBanner.tsx  UpdateBanner.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/scan/: CodeBuffer.tsx  LastScanResult.tsx
src/components/scanner/: ScannerStatus.tsx
src/components/settings/: BarcodeSettings.tsx  DevSettings.tsx  ModeToggle.tsx  PrinterSelect.tsx
src/components/ui/: button.tsx  select.tsx
src/hooks/: useCommands.ts  useTauriEvents.ts
src/infrastructure/: mod.rs  scan_accumulator.rs
src/pdf/: generator.rs  mod.rs
src/services/: honest_sign_validator.rs  mod.rs  scanner_manager.rs
src/store/: useAppStore.ts  useThemeStore.ts
src/types/: index.ts
src/ui/: app.rs  mod.rs  state.rs
